01-redis.yaml
#
#
# Deployment
#
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: nextcloud-fpm
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - env:
        - name: TZ
          value: Europe/Berlin
        name: redis
        image: redis:alpine
      restartPolicy: Always
---
#
# Service
#
#
apiVersion: v1
kind: Service
metadata:
  namespace: nextcloud-fpm
  name: redis
spec:
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
  selector:
    app: redis
---
