04-traefik.yaml
#
# https
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-nextcloud
  namespace: nextcloud-fpm
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`myhostname.fqdn`)
    services:
    - kind: Service
      name: nextcloud
      namespace: nextcloud-fpm
      port: 80
    middlewares:
      - name: sts-header
  tls:
     secretName: tls-user
#     options:
#       name: tlsoption
#       namespace: default
---
#
# http
#
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-nextcloud
  namespace: nextcloud-fpm
spec:
  entryPoints:
  - web
  routes:
  - kind: Rule
    match: Host(`myhostname.fqdn`)
    services:
    - kind: Service
      name: nextcloud
      namespace: nextcloud-fpm
      port: 80
    middlewares:
      - name: 2https-nextcloud
---
#
# http -> https2
#
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: 2https-nextcloud
  namespace: nextcloud-fpm
spec:
  redirectScheme:
     scheme: https
     permanent: true
---
#
# HSTS
#
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: sts-header
  namespace: nextcloud-fpm
spec:
  headers:
    stsSeconds: 15552000
    customFrameOptionsValue: "SAMEORIGIN"
    HostsProxyHeaders: "X-Forwarded-Host"
    SSLProxyHeaders: "X-Forwarded-Proto: https"
    SSLRedirect: "true"
